--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "keywords": [],
   "dependencies": {
     "@builderbot-plugins/openai-assistants": "^0.0.2",
-    "@builderbot/bot": "1.3.1",
-    "@builderbot/provider-baileys": "^1.3.1",
+    "@builderbot/bot": "1.3.2-y.0",
+    "@builderbot/provider-baileys": "1.3.2-y.0",
     "@deepgram/sdk": "^3.11.1",
     "@types/fs-extra": "^11.0.4",
     "@whiskeysockets/baileys": "6.6.0",
     "axios": "^1.11.0",
+    "builderbot-provider-sherpa": "^0.0.4",
     "docker": "^0.2.14",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
