--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@builderbot/bot": "1.3.5",
     "@builderbot/provider-baileys": "1.3.5",
     "@deepgram/sdk": "^3.11.1",
+    "@googlemaps/google-maps-services-js": "^3.4.2",
+    "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
     "@whiskeysockets/baileys": "6.7.21",
     "axios": "^1.11.0",
@@ -23,6 +25,7 @@
     "docker": "^0.2.14",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
+    "express": "^5.1.0",
     "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
     "gaxios": "^6.7.1",
@@ -30,6 +33,7 @@
     "googleapis": "^144.0.0",
     "jimp": "^1.6.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "openai": "^4.85.0",
     "path": "^0.12.7",
     "pdfkit": "^0.16.0",
