--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@builderbot/provider-baileys": "1.3.5",
     "@deepgram/sdk": "^3.11.1",
     "@googlemaps/google-maps-services-js": "^3.4.2",
+    "@supabase/supabase-js": "^2.87.3",
     "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
     "@whiskeysockets/baileys": "6.7.21",
     "axios": "^1.11.0",
+    "body-parser": "^2.2.1",
     "builderbot-provider-sherpa": "^0.1.0",
     "docker": "^0.2.14",
     "dotenv": "^16.4.7",
@@ -37,7 +39,9 @@
     "openai": "^4.85.0",
     "path": "^0.12.7",
     "pdfkit": "^0.16.0",
+    "pino": "^10.1.0",
     "pnpm": "^10.2.0",
+    "qrcode": "^1.5.4",
     "serve-static": "^2.2.0",
     "socket.io": "^4.8.1",
     "wabt": "^1.0.37",
